[project]
name = "iquitos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.6.2",
    "geemap>=0.36.1",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "rasterio>=1.4.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["**/*.ipynb"]
